robot disco solved

--- a/index.html
+++ b/index.html
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/animations.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/fancy-robot.css">
+    <link rel="stylesheet" href="./css/animations.css">
     <title>Fancy Robot Face</title>
   </head>
   <body>
     <div class="robot-container">
       <div class="robot-face-shape">
-        <div class="robot-eye-left"></div>
-        <div class="robot-eye-right"></div>
-        <div class="robot-nose"></div>
-        <div class="robot-teeth">
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-          <div class="robot-tooth"></div>
-        </div>
+    <!-- External parts must be here to align with face -->
+      <div class="robot-mustache">
+      <div class="mustache-left"></div>
+      <div class="mustache-right"></div>
       </div>
       <div class="robot-ear-left"></div>
       <div class="robot-ear-right"></div>
@@ -37,6 +25,30 @@
         <div class="robot-hair-two"></div>
         <div class="robot-hair-one"></div>
       </div>
+
+    <!-- Internal face parts -->
+    <div class="robot-eye-left"></div>
+    <div class="robot-eye-right"></div>
+    <div class="robot-nose"></div>
+    <div class="robot-teeth">
+      <div class="robot-tooth-top"></div>
+      <div class="robot-tooth-top"></div>
+      <div class="robot-tooth-top"></div>
+      <div class="robot-tooth-top"></div>
+      <div class="robot-tooth-top"></div>
+      <div class="robot-tooth-top"></div>
+      <div class="robot-tooth-bottom"></div>
+      <div class="robot-tooth-bottom"></div>
+      <div class="robot-tooth-bottom"></div>
+      <div class="robot-tooth-bottom"></div>
+      <div class="robot-tooth-bottom"></div>
+      <div class="robot-tooth-bottom"></div>
     </div>
+    <div class="robot-tie">
+    <div class="robot-tie-knot"></div>
+    <div class="robot-tie-body"></div>
+</div>
+  </div>
+</div>
   </body>
 </html>
